<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Knock Code</string>
    <string name="loading">Loading…</string>

    <string name="main_retry">Retry</string>
    <string name="main_next">Next</string>
    <string name="main_select_grid_size">Select your grid size</string>
    <string name="main_shortcuts_will_delete">Once the code is changed, all existing shortcuts will be deleted</string>
    <string name="main_too_many_taps">Too many taps, resetting!</string>
    <string name="main_conflict_shortcut">This code conflicts with %1$s, resetting!</string>

    <string name="about_disclaimer_title">Disclaimer</string>
    <string name="about_disclaimer_message" translatable="false">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE\nBy using this software, you implicitly allow the developer to collect usage data about the app. No personally identifiable information is collected.</string>
    <string name="about_translators">Translators</string>
    <string name="about_translator_polish_pantin">pantinPL (Polish)</string>
    <string name="about_translator_russian_julia">Ms_Julia (Russian)</string>

    <string name="custom_shortcuts">Custom shortcuts</string>
    <string name="custom_shortcuts_add">Add</string>
    <string name="custom_shortcuts_edit">Edit</string>
    <string name="custom_shortcuts_delete">Delete</string>
    <string name="custom_shortcut_never_again">Don\'t show this again.</string>
    <string name="custom_shortcuts_instructions">To launch a custom shortcut over the lockscreen, turn on the switch next to it. Exiting the app will take you back to the lockscreen.\nMake sure you mark the app to be shown when locked in App Settings (link available in About)</string>

    <string name="knock_enter_code">Enter your code</string>
    <string name="knock_enter_new_code">Enter your new code</string>
    <string name="knock_confirm_code">Confirm your new code</string>
    <string name="knock_code_correct">Correct</string>
    <string name="knock_code_wrong">Incorrect</string>
    <string name="knock_code_enabling">Device disabled, try again in %1$d seconds</string>
    <string name="knock_code_longpress_cleared">Long pressed, pattern cleared!</string>
    <string name="knock_code_confirm_shortcut">Confirm %1$s</string>
    <string name="knock_no_match">Codes do not match</string>
    <string name="knock_match">Codes match, success!</string>

    <string name="shortcut_helper_apps">Apps</string>
    <string name="shortcut_helper_activities">Activities</string>
    <string name="shortcut_helper_target">Select the target</string>

    <string name="about">About</string>

    <string name="about_help">Help</string>
    <string name="about_help_description">Before looking for help, ensure that the module is active and pattern is enabled in stock settings</string>

    <string name="about_app_settings">Download App Settings Xposed Module</string>
    <string name="about_app_settings_desc">Used to open shortcuts over the lockscreen</string>

    <string name="about_license">License</string>
    <string name="about_license_desc" translatable="false">GPL v3</string>

    <string name="about_disclaimer_desc">By using this module, you agree that the authors are not responsible for any damage</string>

    <string name="about_source_code">Source code</string>

    <string name="about_developers">Developers</string>
    <string name="about_developers_mohammadag" translatable="false">Mohammad Abu-Garbeyyeh</string>
    <string name="about_developers_mohammadag_desc">Original author upto Kitkat</string>
    <string name="about_developers_rijul" translatable="false">Rijul Ahuja</string>
    <string name="about_developers_rijul_desc">Developer for Marshmallow and Lollipop</string>

    <string name="settings">Settings</string>

    <string name="settings_module_inactive">Module is inactive, touch for information</string>
    <string name="settings_module_inactive_title">Knock code is inactive</string>
    <string name="settings_module_inactive_message">Knock Code could not hook the Android System methods needed for it to work. This may have several reasons:\n
    &#x2022; <i>Xposed Framework is not installed</i>\n
    &#x2022; <i>Xposed is installed and active, but you didn\'t enable Knock Code in Xposed installer (\"Modules\" tab) or didn\'t reboot afterwards.</i>\n
    &#x2022; <i>Xposed Framework got disabled by Xposed safemode. Look at the Xposed Thread on XDA for further information.</i>\n
&#x2022; <i>Knock Code may have encountered a crash. You should send me a bug report on the XDA thread (About -> Help).</i></string>
    <string name="settings_require_pattern">Knock code requires pattern unlock, touch here to set up</string>
    <string name="settings_reboot_upgrade">A reboot is required to complete the upgrade</string>

    <string name="settings_change_code">Change knock code</string>
    <string name="settings_set_code">Set up knock code</string>

    <string name="settings_custom_shortcuts_desc">Launch shortcuts directly from the lockscreen</string>

    <string name="settings_about_desc">Help, source code, licensing, authors, etc</string>

    <string name="settings_restart_keyguard">Restart keyguard</string>
    <string name="settings_reboot_required">A reboot or keyguard restart is required</string>

    <string name="settings_app">App settings</string>
    <string name="settings_hide_launcher">Hidden from launcher</string>
    <string name="settings_failsafe">Failsafe</string>
    <string name="settings_failsafe_summary_on">Five consecutive long presses will kill the knock code and restore your stock pattern</string>
    <string name="settings_failsafe_summary_off">Disable at your own risk</string>

    <string name="settings_visibility">Visibility</string>
    <string name="settings_code_fullscreen">Fullscreen knock code</string>

    <string name="settings_code_dialog">Show dialog</string>
    <string name="settings_code_dialog_summary">On too many incorrect attempts</string>

    <string name="settings_code_direct_entry">Directly show knock code entry</string>
    <string name="settings_code_direct_entry_never">Never</string>
    <string name="settings_code_direct_entry_always">Always</string>
    <string name="settings_code_direct_entry_no_clearable_notif">If there are no clearable notifications</string>
    <string name="settings_code_direct_entry_no_notif">If there are no notifications</string>

    <string name="settings_code_taps_visible">Show button taps</string>
    <string name="settings_code_taps_visible_borderless">Borderless button taps</string>

    <string name="settings_code_background">Show background</string>
    <string name="settings_code_background_color">Background color</string>

    <string name="settings_code_text">Text</string>
    <string name="settings_code_text_color">Text color</string>
    <string name="settings_code_text_ready">Show enter text</string>
    <string name="settings_code_text_ready_value">Change the enter text</string>
    <string name="settings_code_text_correct">Show correct text</string>
    <string name="settings_code_text_correct_value">Success text</string>
    <string name="settings_code_text_error">Show error text</string>
    <string name="settings_code_text_error_summary">Error text</string>
    <string name="settings_code_text_reset">Show reset text</string>
    <string name="settings_code_text_reset_summary">When long pressed</string>
    <string name="settings_code_text_reset_value">Reset text</string>
    <string name="settings_code_text_disabled">Show device disabled text</string>
    <string name="settings_code_text_disabled_summary">Use %1$d to represent the remaining seconds below</string>
    <string name="settings_code_text_disabled_value">Device disabled text</string>

    <string name="settings_code_dots">Dots</string>
    <string name="settings_code_dots_visible">Show dots</string>
    <string name="settings_code_dots_color_ready">Default color for dots</string>
    <string name="settings_code_dots_correct">Show dots correct</string>
    <string name="settings_code_dots_color_correct">Dots correct color</string>
    <string name="settings_code_dots_error">Show dots error</string>

    <string name="settings_code_lines">Lines</string>
    <string name="settings_code_lines_visible">Show lines</string>
    <string name="settings_code_lines_color_ready">Default color for lines</string>
    <string name="settings_code_lines_correct">Show lines correct</string>
    <string name="settings_code_lines_color_correct">Lines correct color</string>
    <string name="settings_code_lines_error">Show lines error</string>
    <string name="settings_code_lines_color_error">Lines error color</string>
    <string name="settings_code_lines_disabled">Show lines disabled</string>
    <string name="settings_code_lines_color_disabled">Lines disabled color</string>

    <string name="settings_code_duration">Duration</string>
    <string name="settings_code_duration_summary">Change the visibility duration for success and error, and animation durations</string>
    <string name="settings_correct_duration">Correct duration</string>
    <string name="settings_correct_duration_summary">Time between correct code entry and unlocking; used to show text, lines and animate dots. \nWill cause unlocking lag!</string>
    <string name="settings_error_duration">Error duration</string>
    <string name="settings_error_duration_summary">Time between wrong code entry and resetting; used to show text, lines and animate dots.</string>
    <string name="settings_code_wait_last_dot">Wait for last dot animation</string>
    <string name="settings_code_wait_last_dot_summary">Lag of 320 ms</string>

    <string name="settings_emergency_button">Emergency button</string>
    <string name="settings_show_emergency_button">Show emergency button</string>
    <string name="settings_show_emergency_button_summary_off">Disable at your own risk</string>
    <string name="settings_emergency_text">Show emergency text</string>
    <string name="settings_emergency_text_summary_off">Button taps will still work</string>
    <string name="settings_emergency_background">Show emergency button background</string>

    <string name="settings_vibration">Vibration (ignores system settings)</string>
    <string name="settings_vibrate_tap">Vibrate on tap</string>
    <string name="settings_vibrate_long_press">Vibrate on long press</string>
    <string name="settings_vibrate_error">Vibrate on error</string>
    <string name="settings_appear_anim">Appear animation</string>
    <string name="settings_disappear_anim">Disappear animation</string>
    <string name="about_translator_indonesian_andrian">Andrian Eko (Indonesian)</string>
    <string name="about_translator_brazillian_victor">VictorxD70 (Brazilian)</string>
    <string name="settings_code_relative_taps">Relative taps</string>
    <string name="settings_code_relative_taps_summary">Highly experimental, will disable lines</string>
</resources>
